@@ -1300,6 +1300,7 @@ DISSECTOR_SRC = \
 	packet-usb-video.c	\
 	packet-usb.c		\
 	packet-user_encap.c	\
+	packet-userlog.c	\
 	packet-uts.c		\
 	packet-v120.c		\
 	packet-v150fw.c		\
